fixed memory access bugs